--- a/index.html
+++ b/index.html
@@ -7,7 +7,26 @@
     <link rel="stylesheet" href="country.css">
 </head>
 <body>
-    
+
+    <nav>
+        <h1>Know Your Country.</h1>
+
+        <div class="search-container">
+
+          <img src="earth2.png" alt="Logo">
+
+            <input type="text" id="searchBox" placeholder="Enter country name">
+            <button onclick="start()">Search</button>
+
+        </div>
+        
+    </nav>
+
+    <div id="displayArea"></div>
+
+    <footer>
+        <p>Country Information Finder By- Fariha Islam</p>
+    </footer>
 
     <script src="country.js"></script>
 </body>
